akka version update, it tests with v4 only

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -27,6 +27,7 @@ airlock {
             accesskey = "accesskey"
             secretkey = "secretkey"
         }
+        region = "us-east-1"
     }
 
     sts {
