--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -19,6 +19,7 @@ airlock {
             accesskey = ${?AIRLOCK_STORAGE_S3_ADMIN_ACCESSKEY}
             secretkey = ${?AIRLOCK_STORAGE_S3_ADMIN_SECRETKEY}
         }
+        region = ${?AIRLOCK_STORAGE_S3_AWS_REGION}
     }
 
     sts {
