add connection pool configuration

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -51,3 +51,10 @@ kafka.producer {
     maxblock = ${?AIRLOCK_KAFKA_PRODUCER_MAXBLOCK}
 }
 
+akka {
+    http {
+        host-connection-pool.max-open-requests = ${?AIRLOCK_MAX_OPEN_REQUESTS}
+        host-connection-pool.max-connections = ${?AIRLOCK_MAX_CONNECTIONS}
+    }
+}
+
