--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     command: demo
 
   postgres-server:
-    image: wbaa/rokku-dev-apache-ranger-postgres:0.0.14
+    image: wbaa/rokku-dev-apache-ranger-postgres:0.0.17
 
   ranger-admin:
     image: wbaa/rokku-dev-apache-ranger:0.0.17
@@ -31,7 +31,7 @@ services:
       - "6080:6080"
 
   airlock-sts:
-    image: wbaa/airlock-sts:0.1.9
+    image: wbaa/rokku-sts:0.1.15
     environment:
       - STS_HOST=0.0.0.0
       - STS_PORT=12345
@@ -47,7 +47,7 @@ services:
       - "mariadb"
 
   keycloak:
-    image: wbaa/airlock-dev-keycloak:0.0.4
+    image: wbaa/rokku-dev-keycloak:0.0.5
     environment:
       - KEYCLOAK_USER=admin
       - KEYCLOAK_PASSWORD=admin
@@ -55,7 +55,7 @@ services:
       - "8080:8080"
 
   atlas:
-    image: wbaa/rokku-dev-apache-atlas:0.0.7
+    image: wbaa/rokku-dev-apache-atlas:0.0.8
     ports:
       - "21000:21000"
     depends_on:
@@ -63,7 +63,7 @@ services:
       - "kafka"
 
   mariadb:
-    image: wbaa/airlock-dev-mariadb:0.0.2
+    image: wbaa/rokku-dev-mariadb:0.0.3
     environment:
       - MYSQL_ROOT_PASSWORD=admin
     ports:
