send audit log to kafka topic

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -38,6 +38,8 @@ rokku {
     }
 
     bucketNotificationEnabled = ${?ROKKU_BUCKET_NOTIFY_ENABLED}
+
+    auditEnable = ${?ROKKU_AUDIT_ENABLED}
 }
 
 kafka.producer {
@@ -45,6 +47,7 @@ kafka.producer {
     protocol = ${?ROKKU_KAFKA_PROTOCOL}
     createTopic = ${?ROKKU_KAFKA_CREATE_TOPIC}
     deleteTopic = ${?ROKKU_KAFKA_DELETE_TOPIC}
+    auditTopic = ${?ROKKU_KAFKA_AUDIT_TOPIC}
     retries = ${?ROKKU_KAFKA_PRODUCER_RETRIES}
     backoff = ${?ROKKU_KAFKA_PRODUCER_BACKOFF}
     backoffMax = ${?ROKKU_KAFKA_PRODUCER_BACKOFFMAX}
