--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -46,6 +46,12 @@ rokku {
     }
 
     bucketNotificationEnabled = false
+
+    # allows to record http request as persistent event source
+    requestPersistence {
+        enabled = false
+        persistenceId = "localhost-1"
+    }
 }
 
 akka {
@@ -70,6 +76,21 @@ akka {
         client.parsing.modeled-header-parsing = off
         client.user-agent-header = ""
     }
+
+    persistence {
+        journal.plugin = "cassandra-journal"
+        snapshot-store.plugin = "cassandra-snapshot-store"
+        #journal.plugin = "akka-persistence-redis.journal"
+        #snapshot.plugin = "akka-persistence-redis.snapshot"
+    }
+    actor {
+        serializers {
+            httpRequestSerializer = "com.ing.wbaa.rokku.proxy.persistence.serializers.HttpRequestSerializer"
+        }
+        serialization-bindings {
+            "com.ing.wbaa.rokku.proxy.persistence.ExecutedRequestEvt" = httpRequestSerializer
+        }
+    }
 }
 
 kafka.producer {
@@ -83,4 +104,3 @@ kafka.producer {
     backoffMax = 3000
     maxblock = 1000
 }
-
