request recorder, initial version on C*, no tests

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -51,6 +51,7 @@ rokku {
     requestPersistence {
         enabled = false
         persistenceId = "localhost-1"
+        snapshotInterval = 10000
     }
 }
 
@@ -80,8 +81,6 @@ akka {
     persistence {
         journal.plugin = "cassandra-journal"
         snapshot-store.plugin = "cassandra-snapshot-store"
-        #journal.plugin = "akka-persistence-redis.journal"
-        #snapshot.plugin = "akka-persistence-redis.snapshot"
     }
     actor {
         serializers {
