--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -49,6 +49,14 @@ rokku {
         snapshotInterval = ${?ROKKU_SNAPSHOT_INTERVAL}
     }
 }
+cassandra-journal {
+    contact-points = ${?ROKKU_CASSANDRA_CONTACT_POINTS}
+    port = ${?ROKKU_CASSANDRA_PORT}
+}
+cassandra-snapshot-store {
+    contact-points = ${?ROKKU_CASSANDRA_CONTACT_POINTS}
+    port = ${?ROKKU_CASSANDRA_PORT}
+}
 
 kafka.producer {
     bootstrapServers = ${?ROKKU_KAFKA_BOOTSTRAP_SERVERS}
