cassandra configuration and tests added

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -89,6 +89,7 @@ akka {
         }
         serialization-bindings {
             "com.ing.wbaa.rokku.proxy.persistence.ExecutedRequestEvt" = httpRequestSerializer
+            "com.ing.wbaa.rokku.proxy.persistence.CurrentRequestsState" = httpRequestSerializer
         }
     }
 }
