add kafka ssl configuration

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -67,6 +67,11 @@ kafka.producer {
     backoff = ${?ROKKU_KAFKA_PRODUCER_BACKOFF}
     backoffMax = ${?ROKKU_KAFKA_PRODUCER_BACKOFFMAX}
     maxblock = ${?ROKKU_KAFKA_PRODUCER_MAXBLOCK}
+    ssl.truststore.location = ${?ROKKU_KAFKA_PRODUCER_SSL_TRUSTSTORE_LOCATION}
+    ssl.truststore.password = ${?ROKKU_KAFKA_PRODUCER_SSL_TRUSTSTORE_PASSWORD}
+    ssl.keystore.location = ${?ROKKU_KAFKA_PRODUCER_SSL_KEYSTORE_LOCATION}
+    ssl.keystore.password = ${?ROKKU_KAFKA_PRODUCER_SSL_KEYSTORE_PASSWORD}
+    ssl.key.password = ${?ROKKU_KAFKA_PRODUCER_SSL_KEY_PASSWORD}
 }
 
 akka {
