--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -105,4 +105,9 @@ kafka.producer {
     backoff = 3000
     backoffMax = 3000
     maxblock = 1000
+    ssl.truststore.location = ""
+    ssl.truststore.password = ""
+    ssl.keystore.location = ""
+    ssl.keystore.password = ""
+    ssl.key.password = ""
 }
