add user request queue to s3

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -54,6 +54,12 @@ rokku {
         persistenceId = "localhost-1"
         snapshotInterval = 10000
     }
+
+    storage.s3.request.queue {
+        enable = false
+        size = 100
+        max.size.to.block.in.percent = 80
+    }
 }
 
 akka {
