--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -47,6 +47,12 @@ rokku {
         persistenceId = ${?ROKKU_REQUEST_PERSISTENCE_ID}
         snapshotInterval = ${?ROKKU_SNAPSHOT_INTERVAL}
     }
+
+    storage.s3.request.queue {
+        enable = ${?ROKKU_REQUEST_S3_QUEUE_ENABLED}
+        size = ${?ROKKU_REQUEST_S3_QUEUE_SIZE}
+        max.size.to.block.in.percent = ${?ROKKU_REQUEST_S3_QUEUE_MAX_SIZE_TO_BLOCK_IN_PERCENT}
+    }
 }
 cassandra-journal {
     contact-points = ${?ROKKU_CASSANDRA_CONTACT_POINTS}
