add review comments

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,6 +9,7 @@ rokku {
         allow-create-buckets = ${?ALLOW_CREATE_BUCKETS}
         user-domain-postfix = ${?ROKKU_RANGER_USER_DOMAIN_POSTFIX}
         enabled-audit = ${?ROKKU_RANGER_ENABLED_AUDIT}
+        role-prefix = ${?ROKKU_RANGER_ROLE_PREFIX}
     }
     storage.s3 {
         # Settings for reaching backing storage.
