--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -16,6 +16,7 @@ rokku {
         allow-create-buckets = false
         user-domain-postfix = ""
         enabled-audit = false
+        role-prefix = "role_"
     }
 
     storage.s3 {
