--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,14 @@ services:
       - CEPH_DEMO_ACCESS_KEY=accesskey
       - CEPH_DEMO_SECRET_KEY=secretkey
       - CEPH_DEMO_BUCKET=demobucket
-      - RGW_NAME=localhost
+      - RGW_NAME=s3.localhost
       - RGW_CIVETWEB_PORT=8010
       - NETWORK_AUTO_DETECT=4
       - RESTAPI_LOG_LEVEL=debug
     ports:
       - 8010:8010
       - 5000:5000
+    hostname: s3.localhost
     command: demo
 
   postgres-server:
