--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -85,6 +85,7 @@ akka {
     http {
         host-connection-pool.max-open-requests = ${?ROKKU_MAX_OPEN_REQUESTS}
         host-connection-pool.max-connections = ${?ROKKU_MAX_CONNECTIONS}
+        host-connection-pool.max-retries = ${?ROKKU_HOST_POOL_MAX_RETRIES}
     }
 }
 
