add alluxio cache draft

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -30,6 +30,13 @@ rokku {
         }
         region = "us-east-1"
         v2SignatureEnabled = false
+        cache {
+            enabled = true
+            proto = "http"
+            host = "127.0.0.1"
+            port = 39999
+            apiPath = "/api/v1/s3"
+        }
     }
 
     sts {
