--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ services:
 language: scala
 
 scala:
-- 2.12.8
+- 2.12.10
 
 env:
   global:
@@ -27,7 +27,7 @@ before_script:
 - echo "Running pipeline for branch ${TRAVIS_BRANCH}"
 - if [ "$TRAVIS_PULL_REQUEST" != "false" -o "${TRAVIS_BRANCH}" == "master" ]; then
     echo "Starting dependent containers for testing";
-    docker-compose up -d ceph postgres-server mariadb ranger-admin rokku-sts keycloak cassandra;
+    docker-compose up -d keycloak ceph postgres-server mariadb ranger-admin rokku-sts cassandra;
     pip install --user awscli;
     echo "Compile the project while containers are starting up";
     sbt ++$TRAVIS_SCALA_VERSION clean compile;
