add kafka metrics and timeout settings

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -73,6 +73,7 @@ kafka.producer {
     retries = ${?ROKKU_KAFKA_PRODUCER_RETRIES}
     backoff = ${?ROKKU_KAFKA_PRODUCER_BACKOFF}
     backoffMax = ${?ROKKU_KAFKA_PRODUCER_BACKOFFMAX}
+    requestTimeoutMs = ${?KAFKA_PRODUCER_REQUEST_TIMEOUT_MS}
     maxblock = ${?ROKKU_KAFKA_PRODUCER_MAXBLOCK}
     ssl.truststore.location = ${?ROKKU_KAFKA_PRODUCER_SSL_TRUSTSTORE_LOCATION}
     ssl.truststore.password = ${?ROKKU_KAFKA_PRODUCER_SSL_TRUSTSTORE_PASSWORD}
