--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -111,6 +111,7 @@ kafka.producer {
     retries = 3
     backoff = 3000
     backoffMax = 3000
+    requestTimeoutMs = 300000
     maxblock = 1000
     ssl.truststore.location = ""
     ssl.truststore.password = ""
