add alternative HealthCheck method

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -30,6 +30,15 @@ rokku {
         }
         region = "us-east-1"
         v2SignatureEnabled = false
+
+        healthCheck {
+            # can be one of:
+            #   rgwListBuckets - uses RGW admin to list all buckets in Ceph
+            #   s3ListBucket  - uses AWS S3 client to list single bucket
+            method = "s3ListBucket"
+            interval = 5000
+            bucketName = "rokku_hc_bucket"
+        }
     }
 
     sts {
