update HealthCheck with new probes

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -22,6 +22,15 @@ rokku {
         }
         region = ${?ROKKU_STORAGE_S3_AWS_REGION}
         v2SignatureEnabled = ${?ROKKU_STORAGE_S3_V2_ENABLED}
+
+        healthCheck {
+           # can be one of:
+           #   rgwListBuckets - uses RGW admin to list all buckets in Ceph
+           #   s3ListBucket  - uses AWS S3 client to list single bucket
+           method = ${?ROKKU_STORAGE_S3_HC_METHOD}
+           interval = ${?ROKKU_STORAGE_S3_HC_INTERVAL}
+           bucketName = ${?ROKKU_STORAGE_S3_HC_BUCKET}
+        }
     }
 
     sts {
