--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -30,6 +30,7 @@ rokku {
         }
         region = "us-east-1"
         v2SignatureEnabled = false
+        enabledCache = false
 
         healthCheck {
            # can be one of:
