--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -22,6 +22,7 @@ rokku {
         }
         region = ${?ROKKU_STORAGE_S3_AWS_REGION}
         v2SignatureEnabled = ${?ROKKU_STORAGE_S3_V2_ENABLED}
+        enabledCache = ${?ROKKU_STORAGE_S3_CACHE_ENABLED}
 
         healthCheck {
            # can be one of:
