add first HazelcastCache implementation

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -32,6 +32,7 @@ rokku {
         v2SignatureEnabled = false
         enabledCache = false
         eligibleCachePaths = "/home,/test"
+        cacheInstanceName = "rokkuCache1"
 
         healthCheck {
            # can be one of:
