--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,3 +105,7 @@ services:
       - "9042:9042"
       - "9160:9160"
 
+  cache-management:
+    image:  hazelcast/management-center
+    ports:
+      - 8081:8080
