--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -24,6 +24,7 @@ rokku {
         v2SignatureEnabled = ${?ROKKU_STORAGE_S3_V2_ENABLED}
         enabledCache = ${?ROKKU_STORAGE_S3_CACHE_ENABLED}
         eligibleCachePaths = ${?ROKKU_STORAGE_S3_CACHE_ELIGIBLE_COMMA_SEPARATED_PATHS}
+        cacheInstanceName = ${?ROKKU_CACHE_INSTANCE_NAME}
 
         healthCheck {
            # can be one of:
