--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -31,7 +31,7 @@ rokku {
         region = "us-east-1"
         v2SignatureEnabled = false
         enabledCache = false
-        eligibleCachePaths = "/home,/test"
+        eligibleCachePaths = "/home/,/test/"
         cacheInstanceName = "rokkuCache1"
 
         healthCheck {
