add env settings for HC

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -33,6 +33,7 @@ rokku {
         enabledCache = false
         eligibleCachePaths = "/home/,/test/"
         cacheInstanceName = "rokkuCache1"
+        cacheDStructName = "S3Cache"
 
         healthCheck {
            # can be one of:
