--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -25,6 +25,7 @@ rokku {
         enabledCache = ${?ROKKU_STORAGE_S3_CACHE_ENABLED}
         eligibleCachePaths = ${?ROKKU_STORAGE_S3_CACHE_ELIGIBLE_COMMA_SEPARATED_PATHS}
         cacheInstanceName = ${?ROKKU_CACHE_INSTANCE_NAME}
+        cacheDStructName = ${?ROKKU_CACHE_DSTRUCT_NAME}
 
         healthCheck {
            # can be one of:
