--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -32,6 +32,7 @@ rokku {
         v2SignatureEnabled = false
         enabledCache = false
         eligibleCachePaths = "/home/,/test/"
+        maxEligibleCacheObjectSizeInBytes = 5242880
         cacheInstanceName = "rokkuCache1"
         cacheDStructName = "S3Cache"
 
