set HC policy to LFU with per node limit of objects

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -27,6 +27,7 @@ rokku {
         maxEligibleCacheObjectSizeInBytes = ${?ROKKU_STORAGE_S3_MAX_ELIGIBLE_OBJECT_SIZE_IN_BYTES}
         cacheInstanceName = ${?ROKKU_CACHE_INSTANCE_NAME}
         cacheDStructName = ${?ROKKU_CACHE_DSTRUCT_NAME}
+        cacheSize = ${?ROKKU_CACHE_SIZE}
 
         healthCheck {
            # can be one of:
