--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -35,6 +35,8 @@ rokku {
         maxEligibleCacheObjectSizeInBytes = 5242880
         cacheInstanceName = "rokkuCache1"
         cacheDStructName = "S3Cache"
+        # Accepts any non-negative number. The default value is 10000.
+        cacheSize = 10000
 
         healthCheck {
            # can be one of:
