Add cache layer (#125)
* add cache

* use RequestParser instead of AwsS3TypeRules

* add cache rules v1

* fix request type names

* add first HazelcastCache implementation

* add tests for CacheRulesV1

* refactor aws url parser

* add env settings for HC

* add size limit for cached objects

* rewrite conditions for RangerAuthorizer

* fix tests

* set HC policy to LFU with per node limit of objects

* parser for cachev1

* fix environment names

* discard data if object to big for cache

* set HC policy to LFU with per node limit of objects

Co-authored-by: Krzysztof Zmij <kr7ysztof@users.noreply.github.com>

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -22,6 +22,12 @@ rokku {
         }
         region = ${?ROKKU_STORAGE_S3_AWS_REGION}
         v2SignatureEnabled = ${?ROKKU_STORAGE_S3_V2_ENABLED}
+        enabledCache = ${?ROKKU_STORAGE_S3_CACHE_ENABLED}
+        eligibleCachePaths = ${?ROKKU_STORAGE_S3_CACHE_ELIGIBLE_COMMA_SEPARATED_PATHS}
+        maxEligibleCacheObjectSizeInBytes = ${?ROKKU_STORAGE_S3_MAX_ELIGIBLE_OBJECT_SIZE_IN_BYTES}
+        cacheInstanceName = ${?ROKKU_STORAGE_S3_CACHE_INSTANCE_NAME}
+        cacheDStructName = ${?ROKKU_STORAGE_S3_CACHE_DSTRUCT_NAME}
+        cacheSize = ${?ROKKU_STORAGE_S3_CACHE_SIZE}
 
         healthCheck {
            # can be one of:
