--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -30,6 +30,13 @@ rokku {
         }
         region = "us-east-1"
         v2SignatureEnabled = false
+        enabledCache = false
+        eligibleCachePaths = "/home/,/test/"
+        maxEligibleCacheObjectSizeInBytes = 5242880
+        cacheInstanceName = "rokkuCache1"
+        cacheDStructName = "S3Cache"
+        # Accepts any non-negative number. The default value is 10000.
+        cacheSize = 10000
 
         healthCheck {
            # can be one of:
