add kubernetes discovery mode

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -28,6 +28,9 @@ rokku {
         cacheInstanceName = ${?ROKKU_STORAGE_S3_CACHE_INSTANCE_NAME}
         cacheDStructName = ${?ROKKU_STORAGE_S3_CACHE_DSTRUCT_NAME}
         cacheSize = ${?ROKKU_STORAGE_S3_CACHE_SIZE}
+        namespace = ${?ROKKU_STORAGE_S3_CACHE_NAMESPACE}
+        serviceName = ${?ROKKU_STORAGE_S3_CACHE_SERVICE_NAME}
+        discoveryMode = ${?ROKKU_STORAGE_S3_CACHE_DISCOVERY_MODE}
 
         healthCheck {
            # can be one of:
