--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -37,6 +37,11 @@ rokku {
         cacheDStructName = "S3Cache"
         # Accepts any non-negative number. The default value is 10000.
         cacheSize = 10000
+        # kubernetes related settings. see https://github.com/hazelcast/hazelcast-kubernetes
+        namespace = "rokku-proxy"
+        serviceName = "rokku-proxy"
+        #  set discoveryMode to K8S to enable Kubernetes discoveryMode
+        discoveryMode = ""
 
         healthCheck {
            # can be one of:
