--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -2,3 +2,4 @@
 akka.persistence.journal.plugin = "akka.persistence.journal.inmem"
 # Absolute path to the default snapshot store plugin configuration entry.
 akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
+rokku.storage.s3.enabledCache = true
