add some basic auth to admin EP

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -33,6 +33,7 @@ rokku {
         eligibleCachePaths = "/home/,/test/"
         maxEligibleCacheObjectSizeInBytes = 5242880
         cacheDStructName = "S3Cache"
+        adminToken = "testpass123"
 
         healthCheck {
            # can be one of:
