--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -25,6 +25,7 @@ rokku {
         eligibleCachePaths = ${?ROKKU_STORAGE_S3_CACHE_ELIGIBLE_COMMA_SEPARATED_PATHS}
         maxEligibleCacheObjectSizeInBytes = ${?ROKKU_STORAGE_S3_MAX_ELIGIBLE_OBJECT_SIZE_IN_BYTES}
         cacheDStructName = ${?ROKKU_STORAGE_S3_CACHE_DSTRUCT_NAME}
+        adminToken = ${?ROKKU_STORAGE_S3_CACHE_ADMIN_TOKEN}
 
         healthCheck {
            # can be one of:
