big object in cache

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -32,6 +32,7 @@ rokku {
         enabledCache = false
         eligibleCachePaths = "/home/,/test/"
         maxEligibleCacheObjectSizeInBytes = 5242880
+        strictCacheDownloadTimeoutInSeconds = 5
         cacheDStructName = "S3Cache"
         adminToken = "testpass123"
 
