--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -24,6 +24,7 @@ rokku {
         enabledCache = ${?ROKKU_STORAGE_S3_CACHE_ENABLED}
         eligibleCachePaths = ${?ROKKU_STORAGE_S3_CACHE_ELIGIBLE_COMMA_SEPARATED_PATHS}
         maxEligibleCacheObjectSizeInBytes = ${?ROKKU_STORAGE_S3_MAX_ELIGIBLE_OBJECT_SIZE_IN_BYTES}
+        strictCacheDownloadTimeoutInSeconds = ${?ROKKU_STORAGE_S3_STRICT_CACHE_DOWNLOAD_TIMEOUT_IN_SECONDS}
         cacheDStructName = ${?ROKKU_STORAGE_S3_CACHE_DSTRUCT_NAME}
         adminToken = ${?ROKKU_STORAGE_S3_CACHE_ADMIN_TOKEN}
 
