whitelist filter for lineage

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -45,6 +45,7 @@ rokku {
 
     atlas {
         enabled = ${?ROKKU_ATLAS_ENABLED}
+        whitelistUserAgentSplitByComma = ${?ROKKU_ATLAS_WHITELIST_LOWERCASE_COMMA_SEPARATED_USER_AGENT}
     }
 
     kerberos {
