--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -18,7 +18,7 @@ jobs:
       - name: "Starting dependent containers for testing"
         run: docker-compose up -d keycloak ceph postgres-server mariadb ranger-admin rokku-sts cassandra
       - name: "Install aws cli"
-        run: pip install --user awscli
+        run: pip install --user awscli==1.18.222
       - name: "Compile the project while containers are starting up"
         run: sbt clean compile
       - name: "Wait for containers to be up and running"
