add cache to sts call

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -35,6 +35,7 @@ rokku {
     sts {
         uri = ${?ROKKU_STS_URI}
         encodeSecret = ${?ROKKU_STS_ENCODE_SECRET}
+        cache.ttlInSeconds = ${?ROKKU_STS_CACHE_TTL_IN_SECONDS}
     }
 
     atlas {
