--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -44,6 +44,7 @@ rokku {
     sts {
         uri = "http://127.0.0.1:12345"
         encodeSecret = "jwtprivatekey"
+        cache.ttlInSeconds = 5
     }
 
     atlas {
