request to storage using NPA

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -14,6 +14,7 @@ rokku {
         # Settings for reaching backing storage.
         host = ${?ROKKU_STORAGE_S3_HOST}
         port = ${?ROKKU_STORAGE_S3_PORT}
+        schema = ${?ROKKU_STORAGE_S3_SCHEMA}
 
         admin {
             accesskey = ${?ROKKU_STORAGE_S3_ADMIN_ACCESSKEY}
