--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -22,6 +22,7 @@ rokku {
         # Settings for reaching backing storage.
         host = "127.0.0.1"
         port = 8010
+        schema = "http"
 
         admin {
             accesskey = "accesskey"
