--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           java-version: "adopt@1.8"
       - name: "Starting dependent containers for testing"
-        run: docker-compose up -d keycloak ceph postgres-server mariadb ranger-admin rokku-sts cassandra
+        run: docker-compose up -d keycloak ceph postgres-server mariadb ranger-admin rokku-sts
       - name: "Install aws cli"
         run: pip install --user awscli==1.18.222
       - name: "Compile the project while containers are starting up"
