--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Setup Scala
         uses: olafurpg/setup-scala@v10
         with:
-          java-version: "adopt@1.8"
+          java-version: "17"
       - name: "Starting dependent containers for testing"
         run: docker-compose up -d keycloak ceph postgres-server mariadb ranger-admin rokku-sts
       - name: "Install aws cli"
