--- a/.github/workflows/it-tests.yml
+++ b/.github/workflows/it-tests.yml
@@ -1,20 +1,20 @@
-name: CI-PR
-on:
-  pull_request:
-    branches:
-      - master
+name: It tests
+on: [workflow_call]
+
 jobs:
-  it-test:
-    runs-on: ubuntu-18.04
+  it-tests:
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v1
       - name: "Add s3.localhost to /etc/hosts to be able to run it test on ceph"
         run: echo "127.0.0.1 s3.localhost" | sudo tee -a /etc/hosts
       - name: Setup Scala
-        uses: olafurpg/setup-scala@v10
+        uses: actions/setup-java@v3
         with:
+          distribution: temurin
           java-version: "17"
+          cache: sbt
       - name: "Starting dependent containers for testing"
         run: docker-compose up -d keycloak ceph postgres-server mariadb ranger-admin rokku-sts
       - name: "Install aws cli"
@@ -26,4 +26,4 @@ jobs:
       - name: "setup s3"
         run: bash setupS3Env.sh
       - name: "Running it tests"
-        run: sbt clean coverage test it:test coverageReport
+        run: sbt clean coverage it:test coverageReport
