--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,16 +1,18 @@
-name: CI
-on:
-  push:
+name: Unit tests
+on: [workflow_call]
+
 jobs:
-  test:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v1
       - name: Setup Scala
-        uses: olafurpg/setup-scala@v10
+        uses: actions/setup-java@v3
         with:
+          distribution: temurin
           java-version: "17"
+          cache: sbt
       - name: Running test
         run: sbt clean test;
 
