fix master flow dependent job names

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -17,7 +17,7 @@ jobs:
 
   tag:
     runs-on: ubuntu-latest
-    needs: [tests, it-tests]
+    needs: [m-tests, m-it-tests]
     steps:
       - uses: actions/checkout@v2
         with:
