add ranger app_id to env

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,6 +9,7 @@ rokku {
         user-domain-postfix = ${?ROKKU_RANGER_USER_DOMAIN_POSTFIX}
         enabled-audit = ${?ROKKU_RANGER_ENABLED_AUDIT}
         role-prefix = ${?ROKKU_RANGER_ROLE_PREFIX}
+        app_id = ${?ROKKU_RANGER_API_ID}
     }
     storage.s3 {
         # Settings for reaching backing storage.
@@ -36,11 +37,6 @@ rokku {
         uri = ${?ROKKU_STS_URI}
         encodeSecret = ${?ROKKU_STS_ENCODE_SECRET}
         cache.ttlInSeconds = ${?ROKKU_STS_CACHE_TTL_IN_SECONDS}
-    }
-
-    atlas {
-        enabled = ${?ROKKU_ATLAS_ENABLED}
-        whitelistUserAgentSplitByComma = ${?ROKKU_ATLAS_WHITELIST_LOWERCASE_COMMA_SEPARATED_USER_AGENT}
     }
 
     kerberos {
