configure response entity timeout

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -78,6 +78,7 @@ akka {
         host-connection-pool.max-open-requests = ${?ROKKU_MAX_OPEN_REQUESTS}
         host-connection-pool.max-connections = ${?ROKKU_MAX_CONNECTIONS}
         host-connection-pool.max-retries = ${?ROKKU_HOST_POOL_MAX_RETRIES}
+        host-connection-pool.response-entity-subscription-timeout = ${?ROKKU_RESPONSE_ENTITY_TIMEOUT}
     }
 }
 
