--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -83,6 +83,7 @@ akka {
         server.parsing.modeled-header-parsing = off
         client.parsing.modeled-header-parsing = off
         client.user-agent-header = ""
+        host-connection-pool.response-entity-subscription-timeout = 5.seconds
     }
 }
 
