support multi namespaces

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -53,6 +53,11 @@ rokku {
         size = ${?ROKKU_REQUEST_S3_QUEUE_SIZE}
         max.size.to.block.in.percent = ${?ROKKU_REQUEST_S3_QUEUE_MAX_SIZE_TO_BLOCK_IN_PERCENT}
     }
+
+    namespaces {
+            enable = ${?ROKKU_NAMESPACES_ENABLED}
+            env.var.credentials.prefix = ${?ROKKU_NAMESPACES_ENV_VAR_S3_CREDENTIALS_PREFIX} # key is namespace name and value is accesskey,secretkey (separated by comma)
+        }
 }
 
 kafka.producer {
