--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -60,6 +60,11 @@ rokku {
         size = 100
         max.size.to.block.in.percent = 80
     }
+
+    namespaces {
+        enable = false
+        env.var.credentials.prefix = "NAMESPACE_S3_CREDENTIALS_" # key is namespace name and value is accesskey,secretkey (separated by comma)
+    }
 }
 
 akka {
