--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -13,6 +13,7 @@ rokku {
         service_type = "s3"
         app_id = "testservice"
         allow-list-buckets = true
+        allow-create-delete-buckets = true
         user-domain-postfix = ""
         enabled-audit = false
         role-prefix = "role_"
