Update it tests to use redis instead of mariadb

--- a/.github/workflows/it-tests.yml
+++ b/.github/workflows/it-tests.yml
@@ -16,7 +16,7 @@ jobs:
           java-version: "17"
           cache: sbt
       - name: "Starting dependent containers for testing"
-        run: docker-compose up -d keycloak ceph postgres-server mariadb ranger-admin rokku-sts
+        run: docker-compose up -d keycloak ceph postgres-server redis ranger-admin rokku-sts
       - name: "Install aws cli"
         run: pip install --user awscli==1.18.222
       - name: "Compile the project while containers are starting up"
