propagate slowdown errors to client when checking bucket location

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -24,7 +24,8 @@ rokku {
         }
         region = ${?ROKKU_STORAGE_S3_AWS_REGION}
         v2SignatureEnabled = ${?ROKKU_STORAGE_S3_V2_ENABLED}
-
+        # To add more then one code, seperate them with comma
+        slowdownCodes = ${?ROKKU_STORAGE_S3_SLOWDOWN_CODES}
         healthCheck {
            # can be one of:
            #   s3ListBucket  - uses AWS S3 client to list single bucket
