--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -32,7 +32,7 @@ rokku {
         region = "us-east-1"
         v2SignatureEnabled = false
         # To add more then one code, seperate them with comma
-        slowdownCodes = "503"
+        slowdownCodes = "502, 503"
         healthCheck {
            # can be one of:
            #   s3ListBucket  - uses AWS S3 client to list single bucket
