--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,7 +4,7 @@ rokku {
         bind = ${?ROKKU_HTTP_BIND}
         port = ${?ROKKU_HTTP_PORT}
     }
-    ranger {
+    authorizer {
         allow-list-buckets = ${?ROKKU_ALLOW_LIST_BUCKETS}
         allow-create-delete-buckets = ${?ROKKU_ALLOW_CREATE_DELETE_BUCKETS}
         user-domain-postfix = ${?ROKKU_RANGER_USER_DOMAIN_POSTFIX}
