--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -5,9 +5,7 @@ rokku {
         port = 8987
     }
 
-    ranger {
-        # Settings for reaching Ranger.
-
+    authorizer {
         # make sure the service_type is equal to what is specified in
         # ranger-s3-security.xml
         service_type = "s3"
