add access control provider by class name

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -5,7 +5,7 @@ rokku {
         port = 8987
     }
 
-    authorizer {
+    access-control {
         # make sure the service_type is equal to what is specified in
         # ranger-s3-security.xml
         service_type = "s3"
@@ -15,6 +15,7 @@ rokku {
         user-domain-postfix = ""
         enabled-audit = false
         role-prefix = "role_"
+        class-name = "com.ing.wbaa.rokku.proxy.provider.AccessControlProviderRanger"
     }
 
     storage.s3 {
