add java interface for authorization plugin

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,13 +4,15 @@ rokku {
         bind = ${?ROKKU_HTTP_BIND}
         port = ${?ROKKU_HTTP_PORT}
     }
-    authorizer {
+    access-control {
         allow-list-buckets = ${?ROKKU_ALLOW_LIST_BUCKETS}
         allow-create-delete-buckets = ${?ROKKU_ALLOW_CREATE_DELETE_BUCKETS}
-        user-domain-postfix = ${?ROKKU_RANGER_USER_DOMAIN_POSTFIX}
         enabled-audit = ${?ROKKU_RANGER_ENABLED_AUDIT}
-        role-prefix = ${?ROKKU_RANGER_ROLE_PREFIX}
-        app_id = ${?ROKKU_RANGER_API_ID}
+        plugin-params {
+                    appId = ${?ROKKU_RANGER_API_ID}
+                    userDomainPostfix = ${?ROKKU_RANGER_USER_DOMAIN_POSTFIX}
+                    rolePrefix = ${?ROKKU_RANGER_ROLE_PREFIX}
+                }
     }
     storage.s3 {
         # Settings for reaching backing storage.
