--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -6,16 +6,18 @@ rokku {
     }
 
     access-control {
-        # make sure the service_type is equal to what is specified in
-        # ranger-s3-security.xml
-        service_type = "s3"
-        app_id = "testservice"
         allow-list-buckets = true
         allow-create-delete-buckets = true
-        user-domain-postfix = ""
         enabled-audit = false
-        role-prefix = "role_"
         class-name = "com.ing.wbaa.rokku.proxy.provider.AccessControlProviderRanger"
+        plugin-params {
+            appId = "testservice"
+            # make sure the service_type is equal to what is specified in
+            # ranger-s3-security.xml
+            serviceType = "s3"
+            userDomainPostfix = ""
+            rolePrefix = "role_"
+        }
     }
 
     storage.s3 {
