add access control description to Readme

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,7 +7,8 @@ rokku {
     access-control {
         allow-list-buckets = ${?ROKKU_ALLOW_LIST_BUCKETS}
         allow-create-delete-buckets = ${?ROKKU_ALLOW_CREATE_DELETE_BUCKETS}
-        enabled-audit = ${?ROKKU_RANGER_ENABLED_AUDIT}
+        enabled-audit = ${?ROKKU_ENABLED_AUDIT}
+        class-name = ${?ROKKU_ACCESS_CONTROL_CLASS_NAME}
         plugin-params {
                     appId = ${?ROKKU_RANGER_API_ID}
                     userDomainPostfix = ${?ROKKU_RANGER_USER_DOMAIN_POSTFIX}
