--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -37,6 +37,11 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: '0'
+      - name: Setup Scala
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: "17"
       - name: Build and publish docker image
         run: |
           # Login to docker
