--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,11 +9,7 @@ rokku {
         allow-create-delete-buckets = ${?ROKKU_ALLOW_CREATE_DELETE_BUCKETS}
         enabled-audit = ${?ROKKU_ENABLED_AUDIT}
         class-name = ${?ROKKU_ACCESS_CONTROL_CLASS_NAME}
-        plugin-params {
-                    appId = ${?ROKKU_RANGER_API_ID}
-                    userDomainPostfix = ${?ROKKU_RANGER_USER_DOMAIN_POSTFIX}
-                    rolePrefix = ${?ROKKU_RANGER_ROLE_PREFIX}
-                }
+        plugin-params = ${?ROKKU_ACCESS_CONTROL_PLUGIN_PARAMS}
     }
     storage.s3 {
         # Settings for reaching backing storage.
