--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -10,14 +10,7 @@ rokku {
         allow-create-delete-buckets = true
         enabled-audit = false
         class-name = "com.ing.wbaa.rokku.proxy.provider.AccessControlProviderRanger"
-        plugin-params {
-            appId = "testservice"
-            # make sure the service_type is equal to what is specified in
-            # ranger-s3-security.xml
-            serviceType = "s3"
-            userDomainPostfix = ""
-            rolePrefix = "role_"
-        }
+        plugin-params = "{appId:testservice, serviceType:s3, rolePrefix:role_}"
     }
 
     storage.s3 {
