Introduce akka http client idle-timeout

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -81,6 +81,7 @@ kafka.producer {
 
 akka {
     http {
+        host-connection-pool.client.idle-timeout = ${?ROKKU_CLIENT_IDLE_TIMEOUT}
         host-connection-pool.max-open-requests = ${?ROKKU_MAX_OPEN_REQUESTS}
         host-connection-pool.max-connections = ${?ROKKU_MAX_CONNECTIONS}
         host-connection-pool.max-retries = ${?ROKKU_HOST_POOL_MAX_RETRIES}
