--- a/.github/workflows/it-tests.yml
+++ b/.github/workflows/it-tests.yml
@@ -6,15 +6,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v4
       - name: "Add s3.localhost to /etc/hosts to be able to run it test on ceph"
         run: echo "127.0.0.1 s3.localhost" | sudo tee -a /etc/hosts
       - name: Setup Scala
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: "17"
-          cache: sbt
+      - name: Set up sbt
+        uses: sbt/setup-sbt@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Set up Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install docker-compose -y
       - name: "Starting dependent containers for testing"
         run: docker-compose up -d keycloak ceph postgres-server redis ranger-admin rokku-sts
       - name: "Install aws cli"
