--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -34,14 +34,23 @@ jobs:
     runs-on: ubuntu-latest
     needs: tag
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
           fetch-depth: '0'
       - name: Setup Scala
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: "17"
+      - name: Set up sbt
+        uses: sbt/setup-sbt@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Set up Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install docker-compose -y
       - name: Build and publish docker image
         run: |
           # Login to docker
