--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Set up Docker Compose
         run: |
           sudo apt-get update
+          sudo apt-get install -y libssl-dev
           sudo apt-get install docker-compose -y
       - name: Build and publish docker image
         run: |
